css/style.css
body {
  background-color: #191765;
  font-family: 'Roboto', sans-serif;
  background-repeat: no-repeat;
  background-position-y: 80px;
}

.icons {
  background: white;
}

i {
  color: white;
  height: 30px;
  margin-top: 5px;
}

.top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 2rem;
  margin-top: 30px;
}

.hamburguer {
  margin-right: 30px;
}

.logo {
  padding-left: 30px;
}

a {
  text-decoration: none;
}

.logo-name {
  padding-left: 25px;
  color: white;
  font-weight: 500;
}

.title {
  background-image: url("../pictures/Ellipse18.svg");
  background-repeat: no-repeat;
  padding-bottom: 90px;
  display: flex;
  flex-direction: column;
  justify-items: center;
}

h1 {
  color: #7d73fc;
  font-weight: 700;
  text-align: center;
  padding-top: 55px;
  font-size: 48px;
  letter-spacing: 0.37px;
}

.proffesion {
  font-weight: 500;
  color: #edecff;
  text-align: center;
  padding-top: 20px;
  font-size: 32px;
  height: 80px;
  padding-bottom: 50px;
}

.description {
  color: white;
  font-weight: 400;
  font-size: 28px;
  padding-top: 5px;
  margin: 0px auto 0px auto;
  width: 400px;
}

.separator {
  display: block;
  margin: auto;
  padding: 50px 50px;
}

.habilities {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto;
}

.languajes {
  display: flex;
  flex-direction: column;
  align-content: flex-start;
}

.mixed {
  color: #7d73fc;
  font-weight: 500;
  font-size: 12px;
  line-height: 24px;
  margin-left: 41px;
}

li {
  color: white;
  font-weight: 400;
  font-size: 15px;
  list-style-type: none;
  line-height: 24px;
}

.findMe {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 220px;
  margin: 0px auto 0px auto;
  flex: 1fr 1fr 1fr 1fr 1fr;
}

.link8 {
  display: none;
}

.link {
  height: 40px;
  width: 40px;
}

.work {
  color: white;
  font-weight: 500;
  font-size: 25px;
  display: inline-block;
  margin: 1px;
}

.jobdesc {
  display: flex;
  flex-direction: column;
}

.link6 {
  font-size: 25px;
}

.worktitle {
  color: #7d73fc;
  font-size: 40px;
  font-style: medium;
  text-align: center;
}

.firstback {
  background-image: url("../pictures/Ellipse19.svg");
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-items: center;
}

.worksample1 {
  width: 327px;
  margin: auto;
}

.projectpic1 {
  width: 327px;
  margin-left: auto;
  margin-right: auto;
}

.work1title {
  color: white;
  font-weight: 500;
  font-size: 32px;
  text-align: center;
  padding-top: 25px;
  width: 250px;
}

.workdescription {
  color: white;
  font-size: 20px;
  font-family: 'inter', sans-serif;
  margin: 20px;
  width: 300px;
}

.usedcode {
  display: flex;
  flex-direction: row;
  gap: 30px;
  align-items: center;
  width: 300px;
}

button {
  background-color: #7d73fc;
  padding: 12px;
  width: 89px;
  margin-left: 20px;
  color: white;
  font-size: 10px;
  border: none;
}

.buttontext {
  color: white;
  font-size: 10px;
}

.work2,
.work1,
.work3 {
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-items: center;
  padding-top: 40px;
}

.background2 {
  background-image: url("../pictures/Ellipse20.svg");
  background-position: right;
}

.work2 {
  background-image: url("../pictures/Ellipse20.svg");
  background-position: right;
}

.work3 {
  background-image: url("../pictures/Ellipse21.svg");
  background-position: left;
}

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contactUs {
  margin-top: 120px;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 32px;
  line-height: 44px;
  color: #9390ff;
}

.contactUs-message {
  font-family: 'Inter', sans-serif;
  text-align: center;
  font-style: normal;
  width: 425px;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #f5f5ff;
  padding-left: 24px;
  padding-right: 24px;
}

input {
  margin-right: 24px;
  margin-bottom: 24px;
  background: #fff;
  height: 48px;
}

.name {
  margin-top: 40px;
  padding-left: 7px;
  width: 325px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #81818c;
}

.contactemail {
  padding-left: 7px;
  width: 325px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #191765;
}

#request1 {
  height: 148px;
  width: 325px;
  padding-left: 7px;
  padding-top: 10px;
  color: #81818c;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
}

.submit {
  padding-left: 5px;
  width: 150px;
  height: 48px;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 24px;
  color: #edecff;
  margin: auto;
  display: flex;
  justify-content: center;
}

.myemail {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #ebebff;
  margin-bottom: 40px;
}

@media (min-width: 768px) {
  .findMe {
    width: 768px;
    justify-content: space-between;
  }

  .work {
    margin: 0px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .habilities { width: 600px;
    margin-left: auto;
    margin-right: auto;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto;
    place-items: center;
  }

  .description { width: 600px;
    margin-left: auto;
    margin-right: auto;
  }

  .title {background-image: url("../pictures/twocirclesheader.png");
    background-position: center;
  }

  .link8 {
    display: inline;
  }

  .work1,
  .work2,
  .work3 {
    width: 968px;
    margin: 0px auto 0px auto;
    display: grid;
    grid-template-columns: auto auto;
    margin-top: 50px;
    flex-wrap: wrap;
  }

  .jobdesc {
    width: 450px;
    height: 400px;
  }

  .work1title{
    text-align: left;
    padding-top: 0px;
    margin: 20px 0px 0px 20px;
  }

  body {
    background-image: url("../pictures/Ellipse20.svg"), url("../pictures/Ellipse21.svg");
    background-position: right, left;
    background-position-y: 2000px, 2550px;
  }

  .picorder {
    order: 2;
  }

  .contactUs-message{
    width: 550px;
  }

  .name,
  .contactemail,
  #request1 {
    width: 550px;
  }

  .textorder {
    order: 1;
  }

  .link8 {
    border: solid;
  }

  .bottom {
    justify-content: center;
    align-items: center;
  }

  .myemail {
    margin: 0px 0px 0px 10px;
  }
  
  .projectpic1 {
    width: 520px;
    height: 405px;
    display: inline-block;
    object-fit: fill;
  }
  
}

